# wildspark

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  imgui.ini
src/: main.cpp
src/account/: AccountManager.cpp  AccountManager.h
src/auth/: AuthClient.h  AuthManager.cpp  AuthManager.h
src/auth/clients/: NakamaClient.cpp  NakamaClient.h
src/graphics/: Camera.cpp  Camera.h
src/input/: InputManager.cpp  InputManager.h
src/networking/: Networking.cpp  Networking.h
src/scenes/: Scene.h  SceneManager.cpp  SceneManager.h
src/scenes/CharacterScene/: CharacterCreationScene.cpp  CharacterCreationScene.h  CharacterSelectionScene.cpp  CharacterSelectionScene.h
src/scenes/GameScene/: GameScene.cpp  GameScene.h
src/scenes/LoginScene/: LoginScene.cpp  LoginScene.h
src/world/: Tile.h  WorldMap.cpp  WorldMap.h  WorldRenderer.cpp  WorldRenderer.h
src/world/entities/: Player.cpp  Player.h
tests/: CMakeLists.txt  MockNClientFull.h  test_character_creation_scene.cpp  test_character_creation_scene_edge_cases.cpp  test_character_selection_scene.cpp  test_character_selection_scene_edge_cases.cpp  test_login_scene.cpp  test_login_scene_edge_cases.cpp  test_networking.cpp  test_networking_clean.cpp  test_player.cpp  test_scene_manager.cpp  test_scene_manager_edge_cases.cpp  test_worldmap_updateobject.cpp
tests/mocks/: MockAccountManager.h  MockAuthManager.h  MockNClientFull.h  MockRenderWindow.h  MockRtClient.h  MockSceneManager.h
